--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+# MONGO_URL = 'mongodb+srv://visionX:visionX@cluster0.akdv6ra.mongodb.net/visionX'
 MONGO_URL = 'mongodb+srv://visionX:visionX@cluster0.akdv6ra.mongodb.net/visionX'
 JWT_SECRET = 'visionX'
